hphp/hack/test/typecheck/reified_generics/valid_targ_tpenv_bounds_test3.php.like_types.exp
File "valid_targ_tpenv_bounds_test3.php", line 7, characters 34-41:
Some type constraint(s) here are violated (Typing[4110])
File "valid_targ_tpenv_bounds_test3.php", line 6, characters 18-19:
'Tc' is a constrained type parameter
File "valid_targ_tpenv_bounds_test3.php", line 6, characters 24-24:
Expected A
File "valid_targ_tpenv_bounds_test3.php", line 7, characters 39-40:
But got Tf
File "valid_targ_tpenv_bounds_test3.php", line 8, characters 16-19:
Some type constraint(s) here are violated (Typing[4110])
File "valid_targ_tpenv_bounds_test3.php", line 6, characters 18-19:
'Tc' is a constrained type parameter
File "valid_targ_tpenv_bounds_test3.php", line 6, characters 24-24:
Some type constraint(s) are violated here
File "valid_targ_tpenv_bounds_test3.php", line 6, characters 18-19:
Tc is a constrained type parameter
File "valid_targ_tpenv_bounds_test3.php", line 6, characters 24-24:
Expected A
File "valid_targ_tpenv_bounds_test3.php", line 8, characters 21-22:
But got Tf
File "valid_targ_tpenv_bounds_test3.php", line 8, characters 21-22:
This is not reified, it cannot be used as a reified type argument (Typing[4305])
File "valid_targ_tpenv_bounds_test3.php", line 6, characters 18-19:
Tc is reified
File "valid_targ_tpenv_bounds_test3.php", line 7, characters 39-40:
This is not reified, it cannot be used as a reified type argument (Typing[4305])
File "valid_targ_tpenv_bounds_test3.php", line 6, characters 18-19:
Tc is reified
